cmake_minimum_required(VERSION 2.8)
project(autonomous_driver)

find_package(OpenCV REQUIRED)
find_package(Threads REQUIRED)
find_library(WiringPi REQUIRED)
file(GLOB SRC src/*.cpp LIB lib/*.cpp)
add_executable(autonomous_driver ${SRC} ${LIB})
add_definitions(-std=c++11)
target_link_libraries(autonomous_driver pthread wiringPi ${OpenCV_LIBS} ${Threads_LIBS} ${WiringPi_LIBS})
